# medical-assistant-chatbot

./: .gitignore  README.md  STRUCTURE.md  app.py  pyproject.toml  requirements.txt  store_index.py  template.sh
agents/: code-reviewer.md
research/: trials.ipynb
skills/: review.py
src/: helper.py  prompt.py
