[project]
name = "medical-assistant-langchain-rag-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
    "python-dotenv>=1.2.2",
    "ipykernel>=7.2.0",
    "pinecone-client>=6.0.0",
    "flask>=3.1.3",
]
